--- a/themes/ocean/style.css
+++ b/themes/ocean/style.css
@@ -130,11 +130,11 @@ table.center{
 	vertical-align: top;
 }
 
-.list_label, .list_value, .nowrap {
+.list_label, .list_value {
 	white-space: nowrap;
 }
 
-.list_label_wrap, .list_value_wrap, .wrap {
+.list_label_wrap, .list_value_wrap {
 	white-space: normal;
 }
 
@@ -1136,4 +1136,15 @@ thead {
 	left: -10px; 
 	top: -60px; 
 	z-index: 1;
+}
+
+/* Because the CSS file is only read once, the following two overriding classes MUST
+   appear at the end of the entire CSS file.
+*/
+.nowrap {
+	white-space: nowrap;
+}
+
+.wrap {
+	white-space: normal;
 }
